<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cdLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:hapticFeedbackEnabled="true"
    tools:context=".PhoneActivity">

    <EditText
        android:id="@+id/edCode1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:lineSpacingExtra="0dp"
        android:paddingStart="0dp"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCMC"
        android:maxLength="1"/>

    <EditText
        android:id="@+id/edCode3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:lineSpacingExtra="0dp"
        android:paddingStart="0dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edCode2"
        app:layout_constraintTop_toBottomOf="@+id/tvCMC"
        android:maxLength="1"/>

    <EditText
        android:id="@+id/edCode2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:lineSpacingExtra="0dp"
        android:paddingStart="0dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edCode1"
        app:layout_constraintTop_toBottomOf="@+id/tvCMC"
        android:maxLength="1" />

    <EditText
        android:id="@+id/edCode4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:lineSpacingExtra="0dp"
        android:paddingStart="0dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edCode3"
        app:layout_constraintTop_toBottomOf="@+id/tvCMC"
        android:maxLength="1" />

    <Button
        android:id="@+id/btGo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/phone"
        android:onClick="onClickGo"
        android:src="@drawable/button_go"
        android:text="@string/ready"
        android:textColor="@color/white"
        android:visibility="visible"
        app:backgroundTint="@color/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCMC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="105dp"
        android:text="@string/inputCode"
        android:textColor="@color/codeInput"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="30dp"
        android:foregroundGravity="center"
        android:freezesText="false"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/nextCode"
        android:textColor="@color/codeNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>